# my-cirq-playground

./: .gitignore  README.md  pyproject.toml
examples/: deutsch_jozsa_demo.py  hello_qubit.py  vqe_demo.py
src/classical_algos/: eigensolver.py
src/quantum_algos/: __init__.py  deutsch_jozsa.py  errors.py  visualization.py  vqe.py
tests/: test_classical_eigensolver.py  test_deutsch_jozsa.py  test_vqe.py
