[project]
name = "quantum_algos"
version = "0.1.0"
description = "A playground for quantum algorithms using Cirq"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "easycelsius"}
]
dependencies = [
    "cirq",
    "numpy",
    "scipy",
    "typing-extensions",
    "matplotlib",
    "sympy",
]

[project.urls]
Repository = "https://github.com/Easycelsius/my-cirq-playground"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
